--- a/AppDev Project/AppDev Project/bin/AppDev Project.dll.config
+++ b/AppDev Project/AppDev Project/bin/AppDev Project.dll.config
@@ -51,7 +51,7 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add name="ProjectEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC\SQLEXPRESS;initial catalog=Project;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProjectEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-HEMAL\MSSQLSERVER01;initial catalog=Project;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
