--- a/AppDev Project/AppDev Project/AppDev Project.csproj
+++ b/AppDev Project/AppDev Project/AppDev Project.csproj
@@ -158,6 +158,11 @@
     <Content Include="scripts\jquery.validate.unobtrusive.js" />
     <Content Include="scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="smartlogin\css\style.css" />
+    <Content Include="smartlogin\images\arrow.png" />
+    <Content Include="smartlogin\images\bg3.jpg" />
+    <Content Include="smartlogin\images\mail.png" />
+    <Content Include="smartlogin\images\pass.png" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +170,7 @@
     <Compile Include="Controllers\CargoesController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\Jobs1Controller.cs" />
+    <Compile Include="Controllers\ServiceHistoriesController.cs" />
     <Compile Include="Controllers\TrucksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -244,6 +250,11 @@
     <Content Include="Views\Trucks\Edit.cshtml" />
     <Content Include="Views\Trucks\Index.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
+    <Content Include="Views\ServiceHistories\Create.cshtml" />
+    <Content Include="Views\ServiceHistories\Delete.cshtml" />
+    <Content Include="Views\ServiceHistories\Details.cshtml" />
+    <Content Include="Views\ServiceHistories\Edit.cshtml" />
+    <Content Include="Views\ServiceHistories\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -253,7 +264,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="smartlogin\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
