--- a/AppDev Project/AppDev Project/AppDev Project.csproj
+++ b/AppDev Project/AppDev Project/AppDev Project.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Models\Truck.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\InvoiceVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
